tests/baselines/reference/declFileWithClassNameConflictingWithClassReferredByExtendsClause.errors.txt
declFileWithClassNameConflictingWithClassReferredByExtendsClause.ts(9,9): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
declFileWithClassNameConflictingWithClassReferredByExtendsClause.ts(16,9): error TS2564: Property 'value' has no initializer and is not definitely assigned in the constructor.


==== declFileWithClassNameConflictingWithClassReferredByExtendsClause.ts (2 errors) ====
    declare namespace A.B.Base {
        export class W {
            id: number;
        }
    }
    namespace X.Y.base {
    
        export class W extends A.B.Base.W {
            name: string;
            ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
        }
    }
    
    namespace X.Y.base.Z {
    
        export class W<TValue> extends X.Y.base.W {
            value: boolean;
            ~~~~~
!!! error TS2564: Property 'value' has no initializer and is not definitely assigned in the constructor.
        }
    }
    